deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medusa
  labels:
    app: medusa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medusa
  template:
    metadata:
      labels:
        app: medusa
    spec:
      containers:
        - name: medusa-backend
          image: vishnu9/medusaproj:6.6
          command: ["/bin/sh", "-c", "npx medusa migrations run && npm run seed && npx medusa start"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /medusa
              name: medusa-data
      volumes:
        - name: medusa-data
          emptyDir: {}




---
apiVersion: v1
kind: Service
metadata:
  name: medusa
  labels: 
    app: medusa
    name: medusa
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: medusa
