medusa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /app
spec:
  rules:
  - host: 108.59.83.192
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: medusa
            port:
              number: 9000
